update api server

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <script src="md5.js"></script>
 
 <script type="text/javascript">
-socket=io.connect("192.168.1.120:18086");
+socket=io.connect("dev.marliang.com:18086");
 
 ///GHOST SHOCK FIX
 SYSLAB_GS_LOCK_CODEDES_add=0;
